New Comment added to Prime number Code

--- a/InterviewCode_1.ipynb
+++ b/InterviewCode_1.ipynb
@@ -163,6 +163,7 @@
    ],
    "source": [
     "# Write a program in Python to check if a number is prime\n",
+    "# New Changes made using GitHub"
     "\n",
     "n=int(input(\"Enter Any Number: \"))\n",
     "if n>1:\n",
